install djangorestframework-jwt and set djangorestframework-jwt

--- a/Pipfile
+++ b/Pipfile
@@ -35,6 +35,7 @@ djangorestframework = "*"
 markdown = "*"
 django-filter = "*"
 "psycopg2-binary" = "*"
+djangorestframework-jwt = "*"
 
 
 [dev-packages]
