--- a/Pipfile
+++ b/Pipfile
@@ -36,6 +36,8 @@ markdown = "*"
 django-filter = "*"
 "psycopg2-binary" = "*"
 djangorestframework-jwt = "*"
+django-taggit-serializer = "*"
+django-rest-auth = "*"
 
 
 [dev-packages]
