--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,22 +29,26 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.9.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "^16.3.1",
+    "react": "^16.3.2",
     "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.3.1",
+    "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^4.0.8",
-    "redux": "^3.7.2",
+    "react-router-redux": "^5.0.0-alpha.9",
+    "reactotron-react-js": "^1.13.0",
+    "reactotron-redux": "^1.13.0",
+    "redux": "^4.0.0",
+    "redux-i18n": "^1.5.13",
     "redux-thunk": "^2.2.0",
+    "reset-css": "^3.0.0",
     "resolve": "1.6.0",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "^7.0.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -66,6 +70,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6"
   }
 }
